[package]
name = "j"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]


[dependencies]
irc = { git = "https://github.com/aatxe/irc.git" }
futures = "0.1"
hyper = "*"
hyper-tls = "*"
serde_derive = "*"
serde_json = "*"
serde = "*"
tokio-core = "*"
tokio-signal = "*"
rand = "*"
url = "*"
env_logger = "*"
log = "*"
bullet = { git = "https://gitlab.com/sebk/bullet.git" }
#bullet = { path = "../bullet" }
bincode = "*"
chrono = "*"
unicode-segmentation = "*"
