[package]
name = "j"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

[dependencies]
irc = "0.12.5"
futures = "0.1.25"
hyper = "0.12"
hyper-rustls = "0.17"
serde_derive = "1.0.89"
serde_json = "1.0.39"
serde = "1.0.89"
tokio-core = "0.1.17"
tokio-signal = "0.2.7"
rand = "0.6.5"
url = "1.7.2"
env_logger = "0.6.1"
log = "0.4.6"
bullet = { git = "https://github.com/s3bk/bullet" }
#bullet = { path = "../bullet" }
bincode = "1.1.2"
chrono = "0.4.6"
unicode-segmentation = "1.2.1"
markov = "1.0"
